--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/ssr": "^19.1.5",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.17.1",
+    "swiper": "^11.2.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
