--- a/angular.json
+++ b/angular.json
@@ -100,9 +100,12 @@
               }
             ],
             "styles": [
+              
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              
+            ]
           }
         }
       }
