--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.5",
+    "compressorjs": "^1.2.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.1",
