--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/ssr": "^19.1.5",
     "compressorjs": "^1.2.1",
     "express": "^4.18.2",
+    "html2pdf.js": "^0.10.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.1",
     "swiper": "^11.2.2",
